--- a/pwap/templates/base.html
+++ b/pwap/templates/base.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="static/css/main.css" />
         <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <script src="{{ url_for('static', filename='js/jquery-1.11.1.min.js') }}"></script>
@@ -15,8 +17,6 @@
         </script>
     </head>
     <body>
-        <div class="background">
             {% block content %}{% endblock %}
-        </div>
     </body>
 </html>
