--- a/pwap/templates/learnerSelect.html
+++ b/pwap/templates/learnerSelect.html
@@ -6,9 +6,25 @@ Learner select
 
 {% block content %}
 
-<div>
-
-    <h4>Learner select</h4>
-</div>
+     <div class="container">
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h2 class="panel-title">Learner select</h2>
+            </div>
+            <div class="panel-body">
+               <div class="list-group">
+                <a href="learnerEdit" class="list-group-item">
+                  Mockup 1
+                </a>
+                <a href="learnerEdit" class="list-group-item">Mockup 2</a>
+                <a href="learnerEdit" class="list-group-item">Mockup 3</a>
+                <a href="learnerEdit" class="list-group-item">Mockup 4</a>
+                <a href="learnerEdit" class="list-group-item">Mockup 5</a>
+              </div>
+            </div>
+        </div>
+    </div>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/ace.js"></script>
+    <script src="http://cdnjs.cloudflare.com/ajax/libs/ace/1.1.3/mode-css.js"></script>
 
 {% endblock content %}
