--- a/pwap/templates/base.html
+++ b/pwap/templates/base.html
@@ -3,7 +3,7 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/bootstrap/3.3.0/css/bootstrap.min.css" />
-        <link rel="stylesheet" href="static/css/main.css" />
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}" />
         <link href="{{ url_for('static', filename='css/font-awesome.min.css') }}" rel="stylesheet">
         <title>{% block title %}{% endblock %}</title>
         <script type=text/javascript>
