post code via ajax

--- a/pwap/templates/learnerEdit.html
+++ b/pwap/templates/learnerEdit.html
@@ -31,6 +31,7 @@ Learner edit
                     <iframe id="iframe" sandbox="allow-scripts allow-pointer-lock allow-same-origin allow-popups allow-forms"></iframe>
                 </div>
             </div>
+            <div class="btn btn-lg btn-block btn-primary" id="submit">Submit</div>
 
         </div>
     </div>
