--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -1,10 +1,5 @@
-#mock, #iframe {
-	height: 200px;
-	width: 100%;
-}
-
 #mock img {
-    border: 1px solid black;
+    border: 2px inset;
 }
 
 #cssEditor, #htmlEditor {
