--- a/pwap/templates/uploadForm.html
+++ b/pwap/templates/uploadForm.html
@@ -12,6 +12,20 @@ Upload Form
     <form class="form">
         <input type="file" name="file">
     </form>
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <h4 class="panel-title">Click and Drag to Divide Page into Elements</h4>
+        </div>
+        <div class="panel-body">
+            <canvas id="mycanvas">Your browser does not support HTML5 Canvas</canvas>
+        </div>
+    </div>
 </div>
 
 {% endblock content %}
+
+{% block script %}
+<script type="text/javascript">
+PWAP.upload();
+</script>
+{% endblock script %}
