remove console.logs and add reset button and non-function submit button

--- a/pwap/templates/uploadForm.html
+++ b/pwap/templates/uploadForm.html
@@ -19,6 +19,16 @@ Upload Form
         <div class="panel-body">
             <canvas id="mycanvas">Your browser does not support HTML5 Canvas</canvas>
         </div>
+        <div class="panel-footer">
+            <div class="row">
+                <div class="col-lg-6">
+                    <div id="reset" class="btn btn-lg btn-block btn-default">Reset</div>
+                </div>
+                <div class="col-lg-6">
+                    <div class="btn btn-lg btn-block btn-primary">Submit</div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
