--- a/pwap/static/css/main.css
+++ b/pwap/static/css/main.css
@@ -42,3 +42,34 @@ h4 {
 #landing-title, #landing-login {
 	text-align: center;
 }
+
+#login-modal input {
+	margin-bottom: 20px;
+}
+
+#login-modal .modal-form {
+	width: 275px;
+}
+
+#login-modal .modal-body {
+	overflow: auto;
+	width: 100%;
+}
+
+#login-form {
+	float: left;
+}
+
+#signup-form {
+	float: right;
+}
+
+
+
+/* Client homepage */
+#client-home-title {
+	margin-left: 50px;
+	margin-top: 20px;
+}
+
+
