--- a/pwap/templates/edit_element.html
+++ b/pwap/templates/edit_element.html
@@ -10,6 +10,10 @@ Learner edit
         <div class="panel-heading">
             <h2 class="panel-title">Learner edit</h2>
         </div>
+        <input type="hidden" id="yorigin" value="{{ element.yorigin }}" />
+        <input type="hidden" id="xorigin" value="{{ element.xorigin }}" />
+        <input type="hidden" id="width" value="{{ element.width }}" />
+        <input type="hidden" id="height" value="{{ element.height }}" />
         <div class="panel-body">
             <div class="row">
                 <div class="col-md-6">
@@ -20,7 +24,7 @@ Learner edit
                 </div>
                 <div class="col-md-6" id="mock">
                     <h4>Goal:</h4>
-                    <img data-src="{{ element.img_src }}">
+                    <img data-src="/static/uploads/designs/{{ design.original_file }}">
                 </div>
             </div>
             <div class="row">
