Fixed boostrap js bug

--- a/pwap/templates/landing.html
+++ b/pwap/templates/landing.html
@@ -42,4 +42,14 @@ Landing page
   </div>
 
 
+
+
 {% endblock content %}
+
+{% block script %}
+<script type="text/javascript">
+jQuery(function() {
+    PWAP.login();
+});
+</script>
+{% endblock script %}
