Added a learning modules page

--- a/pwap/templates/learner_home.html
+++ b/pwap/templates/learner_home.html
@@ -14,7 +14,7 @@ Learner landing page
                     <h4>Completed: 6</h4>
                     <h4>In progress: 3</h4>
                     <h4>Available: 12</h4>
-                    <button type="button" class="btn btn-primary btn-lg">Go to learning modules</button>
+                    <a href="modules"><button type="button" class="btn btn-primary btn-lg">Go to learning modules</button></a>
                </div>
           </div>
           <div class="learner-dashboard-pane col-md-6">
