--- a/pwap/templates/edit_element.html
+++ b/pwap/templates/edit_element.html
@@ -24,7 +24,8 @@ Learner edit
                             data-xorigin="{{ element.xorigin }}"
                             data-yorigin="{{ element.yorigin }}"
                             data-width="{{ element.width }}"
-                            data-height="{{ element.height }}" >
+                            data-height="{{ element.height }}"
+                            data-design="{{ design.id }}" >
                     <canvas id="mycanvas">Your browser does not support HTML5 Canvas</canvas>
                 </div>
             </div>
@@ -38,9 +39,19 @@ Learner edit
                 <div class="col-md-6">
                     <h4>Preview</h4>
                     <iframe id="iframe" sandbox="allow-scripts allow-pointer-lock allow-same-origin allow-popups allow-forms" style="width: {{ element.width }}px; height: {{ element.height }}px;"></iframe>
+                    <h4>Diff</h4>
+                    <img id="diff">
                 </div>
             </div>
-            <div class="btn btn-lg btn-block btn-primary" id="submit">Submit</div>
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="btn btn-lg btn-block btn-primary" id="submit">Submit</div>
+                </div>
+                <div class="col-md-6">
+                    <div class="btn btn-lg btn-block btn-default" id="getDiff">Get Diff</div>
+                </div>
+            </div>
+
 
         </div>
     </div>
