--- a/pwap/templates/learner_modules.html
+++ b/pwap/templates/learner_modules.html
@@ -13,7 +13,7 @@ Learnering modules
             </div>
             <div class="panel-body">
                <div class="list-group">
-                <a href="#" class="list-group-item">Module 1</a>
+                <a href="modules/1" class="list-group-item">Module 1: Fonts and Colors</a>
                 <a href="#" class="list-group-item">Module 2</a>
                 <a href="#" class="list-group-item">Module 3</a>
               </div>
